project-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: project
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: project
        image: registry.cloud.sdu.dk/sdu-cloud/project-service:0.1.0
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/psql
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/psql
          name: project-psql
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: project-refresh-token
      - name: token-validation
        configMap:
          name: token-validation
      - name: project-psql
        secret:
          optional: false
          secretName: project-psql

      imagePullSecrets:
        - name: esci-docker

---
apiVersion: v1
kind: Service
metadata:
  name: project
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: project
